# EngPulse_AI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Docs/: EVAL_REPORT.md  EngPulse_PRD.docx  PROGRESS.md  starter-prompt.txt
config/: alerts.yaml  scoring.yaml  thresholds.yaml
datasets/: README.md
datasets/synthetic/: github_commits.json  github_prs.json  github_repo.json  github_reviews.json  github_runs.json  labels.json  linear_issues.json
engpulse/: __init__.py  cli.py  config.py  logging.py
engpulse/agent/: __init__.py  agent.py  planner.py  schema.py  tools.py
engpulse/alerts/: __init__.py  config.py  digest.py  router.py
engpulse/api/: cache.py  deps.py  main.py  services.py
engpulse/connectors/: __init__.py
engpulse/db/: __init__.py  base.py  models.py
engpulse/eval/: __init__.py  corpus.py  harness.py  labels.py  report.py  score.py
engpulse/ingest/: __init__.py  audit.py  github_ingest.py  linear_ingest.py  repo_sync.py  upsert.py
engpulse/llm/: __init__.py  chat.py  embeddings.py  traced.py
frontend/: .gitignore  README.md  package-lock.json  package.json
migrations/: env.py
tests/: conftest.py  test_agent.py  test_agent_eval.py  test_alerts.py  test_api.py  test_ci_health.py  test_config.py  test_delivery.py  test_entity_resolution.py  test_eval_corpus.py  test_eval_harness.py  test_eval_report.py  test_github_ingest.py  test_github_read_path.py  test_knowledge.py  test_linear_ingest.py  test_models.py  test_obs.py  test_pr_flow.py  test_rag.py  test_scoring.py  test_synthesis.py
(+54 files in other folders)
